# acadsort

./: .gitignore  ARCHITECTURE_REVIEW.md  README.md  SPRINT_PLAN.md  requirements.txt  setup_backend.sh  setup_frontend.sh
backend/: .env.example  __init__.py  config.py  main.py
backend/api/: __init__.py  courses.py  files.py  health.py  queue.py  session.py  settings.py  watch_folders.py
backend/classifier/: __init__.py  embeddings.py  engine.py  llm_fallback.py
backend/database/: __init__.py  engine.py  models.py  seed.py
backend/extraction/: __init__.py  docx.py  pdf.py  pptx.py  utils.py
backend/organizer/: __init__.py  mover.py
backend/tests/: __init__.py  conftest.py  test_wave1_gates.py  test_wave3.py  test_wave4.py  test_wave5.py
backend/watcher/: __init__.py  monitor.py  pipeline.py
data/: up_tacloban_courses.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.config.ts  vitest.setup.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/__tests__/: ErrorBoundary.test.tsx  Sidebar.test.tsx  greetings.test.ts  statusMessage.test.ts  useBackendAPI.test.ts
frontend/src/components/: ErrorBoundary.tsx  HealthCheck.tsx  Toast.tsx
frontend/src/data/: greetings.txt
frontend/src/hooks/: useBackendAPI.ts
scripts/: run_backend.sh
src-tauri/: Cargo.toml
(+16 files in other folders)
